docs/.vitepress/styles/main.scss
@use 'fonts';
@use "@/styles/variables" as *;

/**
 * Custom Styles here.
 *
 * ref：https://v1.vuepress.vuejs.org/config/#index-styl
 */

// defined here for styleguide, not in variables.scss because not needed for components
$font-root-regular: 19px;
$font-root-mobile: 16px;

:root {
  // variables for base-components
  --app-color: #3f51b5;
  --app-color-secondary: #8e99f3;
  --map-cluster-bg: rgba(63, 81, 181, .4);
  --map-cluster-bg-inner :rgba(63, 81, 181, .85);
  --map-cluster-bg-hover: rgba(142, 153, 243, .4);
  --map-cluster-bg-inner-hover: rgba(142, 153, 243, .85);

  // variables for the theme
  --vp-font-family-base: "Source Sans Pro", serif;
  // make title fit
  --vp-sidebar-width: 350px;
  --vp-z-index-nav: 1000;
  --vp-z-index-sidebar: 950;
  --vp-z-index-local-nav: 900;
}


:root {
  font-size: $font-root-mobile;

  @media screen and (min-width: $mobile-min-width) {
    font-size: $font-root-regular;
  }
}

body {
  font-size: $font-size-regular;
  color: $font-color;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  box-sizing: border-box;
}

.rotate-180 {
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -o-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.hide {
  position: absolute !important;
  top: auto !important;
  left: -9999px !important;
}

.title {
  font-size: $font-size-large !important;
}

.text, .vp-doc th, .vp-doc td, .vp-doc blockquote > p, .menu,
.VPNavScreenMenuLink,
.VPNavBarMenuLink, .pager-link .title {
  font-size: $font-size-regular !important;
}

.desc, .menu-text, .DocSearch-Button .DocSearch-Button-Placeholder,
.outline-link, .top-link, .outline-title, .details {
  font-size: $font-size-regular !important;

  @media screen and (min-width: $mobile-min-width) {
    font-size: $font-size-small !important;
  }
}

button {
  font-size: $font-size-regular !important;
  line-height: $line-height !important;
}

table {
  overflow-x: auto;
}


.go-to-top {
  bottom: 4.5rem !important;
  right: 1rem !important;
}

// leaflet is setting a tile z-index of 1000 so in order to prevent map overlaying styleguide header bar
.leaflet-pane,
.leaflet-control-container,
.leaflet-top {
  z-index: 10 !important;
}

// base button --active has a z-index of 100 set which interferes with the styleguide header bar
.base-button--active {
  z-index: 10 !important;
}

.home .hero img {
  max-width: 450px!important;
}

